--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ prompt-toolkit>=3.0.5
 urllib3>=1.26.4
 pyfiglet>=0.8.post1
 beautifulsoup4>=4.9.3
+yescaptcha
+selenium
+selenium-requests
+environs
+pillow
+loguru
